--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="eng">
 
 <head>
     <meta charset="UTF-8">
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e371c51c98.js" crossorigin="anonymous"></script>
     <title>Portfolio</title>
 </head>
 
@@ -16,16 +17,33 @@
 
     <header class="header" id="main">
         <div class="container">
-            <nav class="nav">
+            <!-- <nav class="nav">
                 <div class="header__menu">
                     <ul>
-                        <li><a href="#main">Главная</a></li>
-                        <li><a href="#skills">Навыки</a></li>
-                        <li><a href="#portfolio">Портфолио</a></li>
-                        <li><a href="#contacts">Контакты</a></li>
+                        <li><a href="#main">Home</a></li>
+                        <li><a href="#skills">Skills</a></li>
+                        <li><a href="#portfolio">Portfolio</a></li>
+                        <li><a href="#contacts">Contacts</a></li>
                     </ul>
                 </div>
-            </nav>
+            </nav> -->
+            <div class="navbar">
+                <li class="list-item"><i class="fa-solid fa-house fa-3x"></i>
+                    <span class="list-item-name">Home</span>
+                </li>
+                <li class="list-item">
+                    <i class="fa-sharp fa-solid fa-dumbbell fa-3x"></i>
+                    <span class="list-item-name">Skills</span>
+                </li>
+                <li class="list-item">
+                    <i class="fa-solid fa-user fa-3x"></i>
+                    <span class="list-item-name">Portfolio</span>
+                </li>
+                <li class="list-item">
+                    <i class="fa-solid fa-phone fa-3x"></i>
+                    <span class="list-item-name">Contacts</span>
+                </li>
+            </div>
             <div class="who">
                 <div class="who__ami">
                     <div class="who__ami-name title">Евгений Росляков</div>
@@ -39,7 +57,7 @@
     <section class="skills" id="skills"">
         <div class=" container">
         <div class="skills__discription">
-            <h2 class="skills__title title">Навыки</h2>
+            <h2 class="skills__title title">Skills</h2>
             <div class="skills__text text">Я обладаю следующими навыками.</div>
         </div>
         <div class="skills__items">
@@ -68,7 +86,7 @@
     </section>
 
     <section class="portfolio" id="portfolio">
-        <div class="portfolio__title title">Портфолио</div>
+        <div class="portfolio__title title">Portfolio</div>
         <div class="container">
             <div class="portfolio__items">
                 <div class="portfolio__item">
@@ -105,7 +123,7 @@
         </div>
     </section>
     <section class="contacts" id="contacts">
-        <div class="contacts__title title">Контакты</div>
+        <div class="contacts__title title">Contacts</div>
         <div class="container">
             <div class="contacts__list">
                 <div class="contacts__item"><a title="email" href="mailto:bamser@mail.ru"><img src="./image/email.svg"
