--- a/index.html
+++ b/index.html
@@ -17,33 +17,25 @@
 
     <header class="header" id="main">
         <div class="container">
-            <!-- <nav class="nav">
-                <div class="header__menu">
-                    <ul>
-                        <li><a href="#main">Home</a></li>
-                        <li><a href="#skills">Skills</a></li>
-                        <li><a href="#portfolio">Portfolio</a></li>
-                        <li><a href="#contacts">Contacts</a></li>
-                    </ul>
+            <nav>
+                <div class="navbar">
+                    <li class="list-item"><i class="fa-solid fa-house fa-3x"></i>
+                        <span class="list-item-name">Home</span>
+                    </li>
+                    <li class="list-item">
+                        <i class="fa-sharp fa-solid fa-dumbbell fa-3x"></i>
+                        <span class="list-item-name">Skills</span>
+                    </li>
+                    <li class="list-item">
+                        <i class="fa-solid fa-user fa-3x"></i>
+                        <span class="list-item-name">Portfolio</span>
+                    </li>
+                    <li class="list-item">
+                        <i class="fa-solid fa-phone fa-3x"></i>
+                        <span class="list-item-name">Contacts</span>
+                    </li>
                 </div>
-            </nav> -->
-            <div class="navbar">
-                <li class="list-item"><i class="fa-solid fa-house fa-3x"></i>
-                    <span class="list-item-name">Home</span>
-                </li>
-                <li class="list-item">
-                    <i class="fa-sharp fa-solid fa-dumbbell fa-3x"></i>
-                    <span class="list-item-name">Skills</span>
-                </li>
-                <li class="list-item">
-                    <i class="fa-solid fa-user fa-3x"></i>
-                    <span class="list-item-name">Portfolio</span>
-                </li>
-                <li class="list-item">
-                    <i class="fa-solid fa-phone fa-3x"></i>
-                    <span class="list-item-name">Contacts</span>
-                </li>
-            </div>
+            </nav>
             <div class="who">
                 <div class="who__ami">
                     <div class="who__ami-name title">Евгений Росляков</div>
