--- a/index.html
+++ b/index.html
@@ -20,29 +20,33 @@
             <nav>
                 <div class="navbar">
                     <li class="list-item"><i class="fa-solid fa-house fa-3x"></i>
-                        <span class="list-item-name">Home</span>
+                        <span class="list-item-name"><a href="#">Home</a></span>
                     </li>
                     <li class="list-item">
                         <i class="fa-sharp fa-solid fa-dumbbell fa-3x"></i>
-                        <span class="list-item-name">Skills</span>
+                        <span class="list-item-name"><a href="#skills">Skills</a></span>
                     </li>
                     <li class="list-item">
                         <i class="fa-solid fa-user fa-3x"></i>
-                        <span class="list-item-name">Portfolio</span>
+                        <span class="list-item-name"><a href="#portfolio">Portfolio</a></span>
                     </li>
                     <li class="list-item">
                         <i class="fa-solid fa-phone fa-3x"></i>
-                        <span class="list-item-name">Contacts</span>
+                        <span class="list-item-name"><a href="#contacts">Contacts</a></span>
                     </li>
                 </div>
             </nav>
             <div class="who">
+                <div class="who__img">
+                    <img src="./image/myPhoto.webp" alt="myPhoto">
+                </div>
                 <div class="who__ami">
-                    <div class="who__ami-name title">Евгений Росляков</div>
+                    <div class="who__ami-name title">Evgeny Roslyakov</div>
                     <div class="who__ami-text text">Приветствую на своей страничке! Я junior-верстальщик, живу в Москве.
                         Постоянно развиваюсь и осваиваю новые технологии.
                     </div>
                 </div>
+
             </div>
         </div>
     </header>
@@ -54,6 +58,7 @@
         </div>
         <div class="skills__items">
             <div class="skills__item">
+                <div class="skills__item-title"></div>
                 <div class="skills__item-img"><img src="./image/html.svg" alt="html.svg"></div>
                 <div class="skills__item-text">4/5</div>
             </div>
