--- a/index.html
+++ b/index.html
@@ -93,29 +93,26 @@
                             <div class="portfolio__item">
                                 <div class="portfolio__item-text">1 страница <br><span>(форма, Flexbox)</span>
                                 </div>
-                                <div class="portfolio__item-link text"><a href="https://locus.evgenyroslyakov.ru/"
-                                        target="_blank">Ссылка</a></div>
-                                <div class="portfolio__item-img"><img src="./image/Locus.webp" alt="Locus.webp"></div>
+                                <div class="portfolio__item-img"><a href="https://locus.evgenyroslyakov.ru"
+                                        target="_blank"><img src="./image/Locus.webp" alt="Locus.webp"></a></div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__item">
                                 <div class="portfolio__item-text">1 страница <br><span>(Flexbox)</span>
                                 </div>
-                                <div class="portfolio__item-link text"><a href="https://restaurant.evgenyroslyakov.ru/"
-                                        target="_blank">Ссылка</a>
+
+                                <div class="portfolio__item-img"><a href="https://restaurant.evgenyroslyakov.ru"
+                                        target="_blank"><img src="./image/Restaurant.webp" alt="Restaurant.webp"></a>
                                 </div>
-                                <div class="portfolio__item-img"><img src="./image/Restaurant.webp"
-                                        alt="Restaurant.webp"></div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="portfolio__item">
                                 <div class="portfolio__item-text">4 страницы <br><span>(слайдер, Flexbox)</span>
                                 </div>
-                                <div class="portfolio__item-link text"><a href="https://maya.evgenyroslyakov.ru"
-                                        target="_blank">Ссылка</a></div>
-                                <div class="portfolio__item-img"><img src="./image/Maya.webp" alt="Maya.webp"></div>
+                                <div class="portfolio__item-img"><a href="https://maya.evgenyroslyakov.ru"
+                                        target="_blank"><img src="./image/Maya.webp" alt="Maya.webp"></a></div>
                             </div>
                         </div>
                         <div class="swiper-slide">
@@ -123,9 +120,8 @@
                                 <div class="portfolio__item-text">1 страница <br><span>(адаптив
                                         (480,768),слайдер,popup,forms,burger-menu)</span>
                                 </div>
-                                <div class="portfolio__item-link text"><a href="https://service.evgenyroslyakov.ru"
-                                        target="_blank">Ссылка</a></div>
-                                <div class="portfolio__item-img"><img src="./image/Service.webp" alt="Service.webp">
+                                <div class="portfolio__item-img"><a href="https://service.evgenyroslyakov.ru"
+                                        target="_blank"><img src="./image/Service.webp" alt="Service.webp"></a>
                                 </div>
                             </div>
                         </div>
@@ -133,9 +129,8 @@
                             <div class="portfolio__item">
                                 <div class="portfolio__item-text">1 страница <br><span>(popup)</span>
                                 </div>
-                                <div class="portfolio__item-link text"><a href="https://school.evgenyroslyakov.ru/"
-                                        target="_blank">Ссылка</a></div>
-                                <div class="portfolio__item-img"><img src="./image/school.webp" alt="School.webp">
+                                <div class="portfolio__item-img"><a href="https://school.evgenyroslyakov.ru/"><img
+                                            src="./image/school.webp" alt="School.webp"></a>
                                 </div>
                             </div>
                         </div>
@@ -143,9 +138,8 @@
                             <div class="portfolio__item">
                                 <div class="portfolio__item-text">1 страница <br><span>(Flexbox, легкая анимация)</span>
                                 </div>
-                                <div class="portfolio__item-link text"><a href="https://interno.evgenyroslyakov.ru/"
-                                        target="_blank">Ссылка</a></div>
-                                <div class="portfolio__item-img"><img src="./image/interno.webp" alt="Interno.webp">
+                                <div class="portfolio__item-img"><a href="https://interno.evgenyroslyakov.ru/"
+                                        target="_blank"><img src="./image/interno.webp" alt="Interno.webp"></a>
                                 </div>
                             </div>
                         </div>
@@ -163,13 +157,12 @@
                 <div class="contacts__item"><a target="_blank" title="Github" href="https://github.com/Bamser"><img
                             src="./image/github.svg" alt="github.svg"></a>
                 </div>
-                <div class="contacts__item"><a target="_blank" title="vk.com" href="https://vk.com/id160131378"><img
+                <div class="contacts__item"><a target="_blank" title="vk.com" href="https://vk.com/bamserokа"><img
                             src="./image/vk.svg" alt="email.svg"></a>
                 </div>
                 <div class="contacts__item"><a title="email" href="mailto:bamser@mail.ru"><img src="./image/email.svg"
                             alt="email.svg"></a>
                 </div>
-
             </div>
         </div>
     </section>
