--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="header" id="main">
         <div class="container">
             <nav>
-                <div class="navbar">
+                <div class="header__navbar">
                     <li class="list-item"><i class="fa-solid fa-house fa-3x"></i>
                         <span class="list-item-name"><a href="#">Home</a></span>
                     </li>
@@ -51,6 +51,7 @@
 
             </div>
         </div>
+
     </header>
     <section class="skills" id="skills"">
         <div class=" container">
@@ -75,7 +76,7 @@
                 <div class="skills__item-img"><img src="./image/sass.svg" alt="sass.svg"></div>
                 <div class="skills__item-text">3/5</div>
             </div>
-            <div class="skills__item">
+            <div class="skills__item skills__item_center">
                 <div class="skills__item-img"><img src="./image/git.svg" alt="git.svg"></div>
                 <div class="skills__item-text">2/5</div>
             </div>
@@ -94,7 +95,8 @@
                                 <div class="portfolio__item-text">1 страница <br><span>(форма, Flexbox)</span>
                                 </div>
                                 <div class="portfolio__item-img"><a href="https://locus.evgenyroslyakov.ru"
-                                        target="_blank"><img src="./image/Locus.webp" alt="Locus.webp"></a></div>
+                                        target="_blank"><img src="./image/Locus.webp" loading="lazy"
+                                            alt="Locus.webp"></a></div>
                             </div>
                         </div>
                         <div class="swiper-slide">
@@ -103,7 +105,8 @@
                                 </div>
 
                                 <div class="portfolio__item-img"><a href="https://restaurant.evgenyroslyakov.ru"
-                                        target="_blank"><img src="./image/Restaurant.webp" alt="Restaurant.webp"></a>
+                                        target="_blank"><img src="./image/Restaurant.webp" loading="lazy"
+                                            alt="Restaurant.webp"></a>
                                 </div>
                             </div>
                         </div>
@@ -112,7 +115,8 @@
                                 <div class="portfolio__item-text">4 страницы <br><span>(слайдер, Flexbox)</span>
                                 </div>
                                 <div class="portfolio__item-img"><a href="https://maya.evgenyroslyakov.ru"
-                                        target="_blank"><img src="./image/Maya.webp" alt="Maya.webp"></a></div>
+                                        target="_blank"><img src="./image/Maya.webp" loading="lazy" alt="Maya.webp"></a>
+                                </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
@@ -121,7 +125,8 @@
                                         (480,768),слайдер,popup,forms,burger-menu)</span>
                                 </div>
                                 <div class="portfolio__item-img"><a href="https://service.evgenyroslyakov.ru"
-                                        target="_blank"><img src="./image/Service.webp" alt="Service.webp"></a>
+                                        target="_blank"><img src="./image/Service.webp" loading="lazy"
+                                            alt="Service.webp"></a>
                                 </div>
                             </div>
                         </div>
@@ -130,7 +135,7 @@
                                 <div class="portfolio__item-text">1 страница <br><span>(popup)</span>
                                 </div>
                                 <div class="portfolio__item-img"><a href="https://school.evgenyroslyakov.ru/"><img
-                                            src="./image/school.webp" alt="School.webp"></a>
+                                            src="./image/school.webp" loading="lazy" alt="School.webp"></a>
                                 </div>
                             </div>
                         </div>
@@ -139,7 +144,8 @@
                                 <div class="portfolio__item-text">1 страница <br><span>(Flexbox, легкая анимация)</span>
                                 </div>
                                 <div class="portfolio__item-img"><a href="https://interno.evgenyroslyakov.ru/"
-                                        target="_blank"><img src="./image/interno.webp" alt="Interno.webp"></a>
+                                        target="_blank"><img src="./image/interno.webp" loading="lazy"
+                                            alt="Interno.webp"></a>
                                 </div>
                             </div>
                         </div>
