fixed' git push git statua git status clear

--- a/index.html
+++ b/index.html
@@ -92,6 +92,16 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="portfolio__item">
+                                <div class="portfolio__item-text">1 страница <br><span>(Flexbox, Adaptive(480,
+                                        768), popup, forms)</span>
+                                </div>
+                                <div class="portfolio__item-img"><a href="https://dogs.evgenyroslyakov.ru/"
+                                        target="_blank"><img src="./image/Dogs.webp" loading="lazy" alt="Dogs.webp"></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="portfolio__item">
                                 <div class="portfolio__item-text">1 страница <br><span>(форма, Flexbox)</span>
                                 </div>
                                 <div class="portfolio__item-img"><a href="https://locus.evgenyroslyakov.ru"
