--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -53,37 +53,36 @@
         </div>
 
     </header>
-    <section class="skills" id="skills"">
+    <section class="skills" id="skills">
         <div class=" container">
-        <div class="skills__discription">
-            <h2 class="skills__title title">Skills</h2>
-        </div>
-        <div class="skills__items">
-            <div class="skills__item">
-                <div class="skills__item-title"></div>
-                <div class="skills__item-img"><img src="./image/html.svg" alt="html.svg"></div>
-                <div class="skills__item-text">4/5</div>
+            <div class="skills__discription">
+                <h2 class="skills__title title">Skills</h2>
             </div>
-            <div class="skills__item">
-                <div class="skills__item-img"><img src="./image/css.svg" alt="css.svg"></div>
-                <div class="skills__item-text">4/5</div>
+            <div class="skills__items">
+                <div class="skills__item">
+                    <div class="skills__item-title"></div>
+                    <div class="skills__item-img"><img src="./image/html.svg" alt="html.svg"></div>
+                    <div class="skills__item-text">4/5</div>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-img"><img src="./image/css.svg" alt="css.svg"></div>
+                    <div class="skills__item-text">4/5</div>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-img"><img src="./image/figma.svg" alt="figma.svg"></div>
+                    <div class="skills__item-text">3/3</div>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-img"><img src="./image/sass.svg" alt="sass.svg"></div>
+                    <div class="skills__item-text">3/5</div>
+                </div>
+                <div class="skills__item skills__item_center">
+                    <div class="skills__item-img"><img src="./image/git.svg" alt="git.svg"></div>
+                    <div class="skills__item-text">2/5</div>
+                </div>
             </div>
-            <div class="skills__item">
-                <div class="skills__item-img"><img src="./image/figma.svg" alt="figma.svg"></div>
-                <div class="skills__item-text">3/3</div>
-            </div>
-            <div class="skills__item">
-                <div class="skills__item-img"><img src="./image/sass.svg" alt="sass.svg"></div>
-                <div class="skills__item-text">3/5</div>
-            </div>
-            <div class="skills__item skills__item_center">
-                <div class="skills__item-img"><img src="./image/git.svg" alt="git.svg"></div>
-                <div class="skills__item-text">2/5</div>
-            </div>
-        </div>
         </div>
     </section>
-
     <section class="portfolio" id="portfolio">
         <div class="portfolio__title title">Portfolio</div>
         <div class="container">
@@ -164,7 +163,7 @@
                     <div class="swiper-button-next"></div>
                 </div>
             </div>
-
+        </div>
     </section>
     <section class="contacts" id="contacts">
         <div class="contacts__title title">Contacts</div>
