--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </nav>
             <div class="who">
                 <div class="who__img">
-                    <img src="./image/myPhoto.webp" alt="myPhoto">
+                    <img src="./image/myPhoto.jpg" alt="myPhoto">
                 </div>
                 <div class="who__ami">
                     <div class="who__ami-name title">Evgeny Roslyakov</div>
