--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <img src="./image/myPhoto.jpg" alt="myPhoto">
                 </div>
                 <div class="who__ami">
-                    <div class="who__ami-name title">Evgeny Roslyakov</div>
+                    <h1 class="who__ami-name title">Евгений Росляков</h1>
                     <div class="who__ami-text text">Приветствую на своей страничке! Я занимаюсь версткой сайтов, живу в
                         Москве.
                         Постоянно развиваюсь и осваиваю новые технологии.
