--- a/index.html
+++ b/index.html
@@ -159,8 +159,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-button-next"></div>
+                    <div class="swiper__buttons swiper-button-left">
+                        <img src="./image/arrow-left.svg" alt="arrow-left">
+                    </div>
+                    <div class="swiper__buttons swiper-button-right">
+                        <img src="./image/arrow-right.svg" alt="arrrow-right">
+                    </div>
                 </div>
             </div>
         </div>
