--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                 </div>
                 <div class="who__ami">
                     <h1 class="who__ami-name title">Евгений Росляков</h1>
-                    <div class="who__ami-text text">Приветствую на своей страничке! Я занимаюсь версткой сайтов, живу в
+                    <p class="who__ami-text text">Приветствую на своей страничке! Я занимаюсь версткой сайтов, живу в
                         Москве.
                         Постоянно развиваюсь и осваиваю новые технологии.
-                    </div>
+                    </p>
                 </div>
 
             </div>
@@ -84,7 +84,7 @@
         </div>
     </section>
     <section class="portfolio" id="portfolio">
-        <div class="portfolio__title title">Portfolio</div>
+        <h2 class="portfolio__title title">Portfolio</h2>
         <div class="container">
             <div class="portfolio__items">
                 <div class="swiper">
@@ -160,17 +160,17 @@
                         </div>
                     </div>
                     <div class="swiper__buttons swiper-button-left">
-                        <img src="./image/arrow-left.svg" alt="arrow-left">
+                        <img src="./image/arrow-circle-left.svg" alt="arrow-left">
                     </div>
                     <div class="swiper__buttons swiper-button-right">
-                        <img src="./image/arrow-right.svg" alt="arrrow-right">
+                        <img src="./image/arrow-circle-right.svg" alt="arrrow-right">
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <section class="contacts" id="contacts">
-        <div class="contacts__title title">Contacts</div>
+        <h2 class="contacts__title title">Contacts</h2>
         <div class="container">
             <div class="contacts__list">
                 <div class="contacts__item"><a target="_blank" title="Github" href="https://github.com/Bamser"><img
