--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e371c51c98.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/swiper-bundle.css">
     <title>Portfolio</title>
@@ -42,7 +43,7 @@
                     <img src="./image/myPhoto.jpg" alt="myPhoto">
                 </div>
                 <div class="who__ami">
-                    <h1 class="who__ami-name title">Евгений Росляков</h1>
+                    <h1 class="who__ami-name title">Evgeny Roslyakov</h1>
                     <p class="who__ami-text text">Приветствую на своей страничке! Я занимаюсь версткой сайтов, живу в
                         Москве.
                         Постоянно развиваюсь и осваиваю новые технологии.
